@@ -1,5 +1,35 @@
-<p>archive</p>
-
-{% for article in articles %}
-  <p>{{ article | link_to_article }}</p>
+  <div id="primary" class="single-post">
+    <div class="inside">
+      <div class="primary">
+        <h1>Archives for {{section.name}} on {{archive_date | format_date: 'my'}}</h1>
+        <ul class="dates">
+          {% for article in articles %}
+            <li>
+              <span class="date">{{article.published_at | date: '%d.%m.%y' }}</span>  
+              {{ article | link_to_article }} posted in 
+              {% for section in article.sections %}
+                {{section | link_to_section }}{% unless forloop.last %}, {% endunless %}
+              {% endfor %}
+            </li>
+          {% endfor %}
+        </ul>
+      </div>
+  		
+		
+		  	<div class="secondary">
+      		<h2>About the archives</h2>
+      		<div class="featured">
+      			<p>Welcome to the archives here at {{site.title}}. Have a look around.</p>
+<ul>
+{% for month in section.months %}
+  <li>{{ section | link_to_month: month }}</li>
 {% endfor %}
+</ul>
+      	</div>
+      </div>
+      
+      <div class="clear"></div>
+  </div>
+</div>
+  
+
